change some layout bug

--- a/src/components/Orders/OrderArea/OrderArea.module.css
+++ b/src/components/Orders/OrderArea/OrderArea.module.css
@@ -1,6 +1,6 @@
 .title {
   text-transform: uppercase;
-  margin: 2rem 0;
+  margin: 0.5rem 0;
 }
 
 .container {
@@ -19,8 +19,8 @@
   display: flex;
   border: 1px solid gray;
   border-radius: 10px;
-  padding: 1.5rem 2rem;
-  margin-top: 2rem;
+  padding: 1.5rem 1.5rem;
+  margin-top: 0.5rem;
 }
 
 .link {
